[BE0037] Create, Get Method of Design, PartOfDesign and ItemMask